--- a/PlayerSDK/project.properties
+++ b/PlayerSDK/project.properties
@@ -14,3 +14,4 @@
 target=android-19
 android.library=true
 android.library.reference.1=../CastCompanionLibrary-android
+android.library.reference.2=../../ExoPlayer/library/src/main
