FEC-1045 #comment prefer hls playback #time 4h

--- a/PlayerSDK/project.properties
+++ b/PlayerSDK/project.properties
@@ -13,5 +13,7 @@
 # Project target.
 target=android-19
 android.library=true
-android.library.reference.1=../CastCompanionLibrary-android
-android.library.reference.2=../googlemediaframework
+android.library.reference.1=../../../player-sdk-native-android/ExoPlayerLib
+android.library.reference.2=../../../player-sdk-native-android/CastCompanionLibrary-android
+android.library.reference.3=../../../player-sdk-native-android/googlemediaframework
+android.library.reference.4=../../../Android-HLS-lib/HLSPlayerSDK
