--- a/kalturaPlay/build.gradle
+++ b/kalturaPlay/build.gradle
@@ -21,6 +21,6 @@ android {
 dependencies {
     compile project(':playerSDK')
     compile 'com.android.support:mediarouter-v7:19.+'
-    compile 'com.google.android.gms:play-services:+'
+    compile 'com.google.android.gms:play-services:6+'
     compile 'com.android.support:appcompat-v7:21.+'
 }
