#FEC-2564 #comment taken the opportunity to fix the reopening of the application after clicking on an ad #time 2h

--- a/castCompanionLibraryandroid/build.gradle
+++ b/castCompanionLibraryandroid/build.gradle
@@ -18,7 +18,7 @@ android {
 }
 
 dependencies {
-    compile 'com.google.android.gms:play-services:6+'
+    compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.android.support:mediarouter-v7:21+'
     compile 'com.android.support:appcompat-v7:21+'
 }
