--- a/playerSDK/build.gradle
+++ b/playerSDK/build.gradle
@@ -25,5 +25,6 @@ dependencies {
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.android.support:mediarouter-v7:19.+'
     compile 'com.android.support:appcompat-v7:21.+'
+    compile 'com.google.code.gson:gson:2.3.1'
     compile files('libs/ima-android-sdk-beta9.jar')
 }
