--- a/kalturaPlay/src/main/AndroidManifest.xml
+++ b/kalturaPlay/src/main/AndroidManifest.xml
@@ -44,21 +44,7 @@
 	            android:host="kalturaplayertoolkit.com"
 	            android:pathPrefix="/"
 	            android:scheme="http" />
-	        <data
-	            android:host="www.kalturaplayertoolkit.com"
-	            android:pathPrefix="/"
-	            android:scheme="http" />
-	
-	<!--        <data
-	            android:host="kaltura.com"
-	            android:path="/api_v3/index.php/service/shortlink_shortlink/action/goto/id/0000/kalturaplayertoolkit"
-	            android:scheme="http" />
-	        <data
-	            android:host="www.kaltura.com"
-	            android:path="/api_v3/index.php/service/shortlink_shortlink/action/goto/id/0000/kalturaplayertoolkit"
-	            android:scheme="http" />
-	            -->
-	            
+
     	</intent-filter>
         </activity>
         
@@ -66,7 +52,7 @@
             android:name="com.google.sample.castcompanionlibrary.cast.player.VideoCastControllerActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
-            android:parentActivityName="com.kaltura.MainActivity"
+            android:parentActivityName="com.kaltura.kalturaplayertoolkit.MainActivity"
             android:screenOrientation="portrait"
     		android:theme="@style/Theme.AppCompat" >
             <meta-data
