--- a/kalturaPlay/src/main/AndroidManifest.xml
+++ b/kalturaPlay/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
             android:name="com.kaltura.kalturaplayertoolkit.MainActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" 
-            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale" >
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale"
+            android:launchMode="singleTop">
             
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
