--- a/playerSDK/src/main/AndroidManifest.xml
+++ b/playerSDK/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.kplayersdk"
     android:versionCode="1"
@@ -7,13 +8,22 @@
         android:minSdkVersion="15"
         android:targetSdkVersion="19" />
 
+    <android:uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
-        
-        
+        <activity
+            android:name="com.kaltura.playersdk.BrowserActivity"
+            android:label="@string/title_activity_browser" >
+        </activity>
     </application>
 
 </manifest>
