#FEC-2906 #comment all the share strategies are done

--- a/kalturaPlay/build.gradle
+++ b/kalturaPlay/build.gradle
@@ -8,6 +8,8 @@ android {
         applicationId "com.kaltura.kalturaplayertoolkit"
         minSdkVersion 15
         targetSdkVersion 21
+        versionCode 1
+        versionName "0.7"
     }
 
     buildTypes {
