--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ notifications:
   email:
     recipients:
       - noam.tamim@kaltura.com
+      - itay.kinnrot@kaltura.com
     on_success: change
     on_failure: always
     
