--- a/kalturaPlay/build.gradle
+++ b/kalturaPlay/build.gradle
@@ -22,7 +22,7 @@ android {
 
 dependencies {
     compile project(':playerSDK')
-    compile 'com.android.support:mediarouter-v7:19.+'
-    compile 'com.google.android.gms:play-services:6.5.87'
-    compile 'com.android.support:appcompat-v7:21.+'
+    compile 'com.android.support:mediarouter-v7:22.2.1'
+    compile 'com.google.android.gms:play-services:7.5.0'
+    compile 'com.android.support:appcompat-v7:22.2.1'
 }
