--- a/playerSDK/build.gradle
+++ b/playerSDK/build.gradle
@@ -21,10 +21,9 @@ dependencies {
     compile project(':exoPlayerLib')
     compile project(':castCompanionLibraryandroid')
     compile project(':googlemediaframework')
-    compile project(':hLSPlayerSDK')
-    compile 'com.google.android.gms:play-services:6.5.87'
-    compile 'com.android.support:mediarouter-v7:19.+'
-    compile 'com.android.support:appcompat-v7:21.+'
+    compile 'com.google.android.gms:play-services:7.5.0'
+    compile 'com.android.support:mediarouter-v7:22.2.1'
+    compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.google.code.gson:gson:2.3.1'
-    compile files('libs/ima-android-sdk-beta9.jar')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
 }
