--- a/castCompanionLibraryandroid/src/main/AndroidManifest.xml
+++ b/castCompanionLibraryandroid/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.AppCompat" >
     </application>
 
 </manifest>
