--- a/playerSDK/src/main/AndroidManifest.xml
+++ b/playerSDK/src/main/AndroidManifest.xml
@@ -10,16 +10,16 @@
 
     <android:uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="18" />
+         />
     <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <android:uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="18" />
+         />
 
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.AppCompat" >
         <activity
             android:name="com.kaltura.playersdk.BrowserActivity"
             android:label="@string/title_activity_browser" >
