--- a/kalturaPlay/src/main/AndroidManifest.xml
+++ b/kalturaPlay/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:allowBackup="true"
         android:icon="@drawable/play_icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat">
         
         <meta-data
      	android:name="com.google.android.gms.version"
