--- a/exoPlayerLib/build.gradle
+++ b/exoPlayerLib/build.gradle
@@ -15,4 +15,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+    
+    lintOptions {
+        abortOnError false
+    }
+    
 }
