--- a/castCompanionLibraryandroid/build.gradle
+++ b/castCompanionLibraryandroid/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 22
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
         minSdkVersion 10
-        targetSdkVersion 21
+        targetSdkVersion 22
     }
 
     buildTypes {
@@ -18,7 +18,7 @@ android {
 }
 
 dependencies {
-    compile 'com.google.android.gms:play-services:6.5.87'
-    compile 'com.android.support:mediarouter-v7:21+'
-    compile 'com.android.support:appcompat-v7:21+'
+    compile 'com.android.support:mediarouter-v7:22.0.1'
+    compile 'com.google.android.gms:play-services:8.1.0'
+    compile 'com.android.support:appcompat-v7:22.0.1'
 }
