--- a/googlemediaframework/build.gradle
+++ b/googlemediaframework/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 22
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 21
+        targetSdkVersion 22
     }
 
     buildTypes {
@@ -19,5 +19,5 @@ android {
 
 dependencies {
     compile project(':exoPlayerLib')
-    compile 'com.android.support:support-v4:21+'
+    compile 'com.android.support:support-v4:22.2.1'
 }
