--- a/kalturaPlay/src/main/AndroidManifest.xml
+++ b/kalturaPlay/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     
 
     <application
@@ -20,7 +21,7 @@
       	android:value="@integer/google_play_services_version" /> 
       	
         <activity
-            android:name="com.kaltura.kalturaplayertoolkit.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" 
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale"
