--- a/kalturaPlay/build.gradle
+++ b/kalturaPlay/build.gradle
@@ -21,7 +21,10 @@ android {
 
 dependencies {
     compile project(':playerSDK')
-    compile 'com.android.support:mediarouter-v7:22.0.1'
+    compile 'com.android.support:mediarouter-v7:23.1.0'
     compile 'com.google.android.gms:play-services:8.1.0'
-    compile 'com.android.support:appcompat-v7:22.0.1'
+    compile 'com.android.support:appcompat-v7:23.1.0'
+    compile 'com.google.android.gms:play-services-ads:8.1.0'
+    compile 'com.google.android.gms:play-services-identity:8.1.0'
+    compile 'com.google.android.gms:play-services-gcm:8.1.0'
 }
