Replaced hlslib.jar with HLSPlayerSDK.aar. This archive also includes android-async-http, so the jar for that library was also deleted. This seems to fix issue #76.

--- a/kalturaPlay/build.gradle
+++ b/kalturaPlay/build.gradle
@@ -19,6 +19,12 @@ android {
     }
 }
 
+repositories {
+    flatDir {
+        dirs '../playerSDK/libs'
+    }
+}
+
 dependencies {
     compile project(':playerSDK')
     compile 'com.android.support:mediarouter-v7:22.0.1'
