--- a/playerSDK/build.gradle
+++ b/playerSDK/build.gradle
@@ -17,6 +17,12 @@ android {
     }
 }
 
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
+
 dependencies {
     compile project(':exoPlayerLib')
     compile project(':castCompanionLibraryandroid')
@@ -25,5 +31,6 @@ dependencies {
     compile 'com.android.support:mediarouter-v7:22.0.1'
     compile 'com.android.support:appcompat-v7:22.0.1'
     compile 'com.google.code.gson:gson:2.3.1'
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(dir: 'libs', include: ['ima-sdk-*.jar'])
+    compile(name:'HLSPlayerSDK', ext:'aar')
 }
