FEC-4484 #comment Applink handling improvements.
Changed intent filter URL to https://kgit.html5video.org/kplay.
The embed frame URL is encoded, and passed as parameter "embedFrameURL".
Android 6 autoverify not enabled yet; it requires building with SDK 23.

--- a/kalturaPlay/src/main/AndroidManifest.xml
+++ b/kalturaPlay/src/main/AndroidManifest.xml
@@ -35,10 +35,7 @@
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
 
-                <data
-                    android:host="kalturaplay.appspot.com"
-                    android:pathPrefix="/play"
-                    android:scheme="https"/>
+                <data android:host="kgit.html5video.org" android:pathPrefix="/kplay" android:scheme="https"/>
             </intent-filter>
         </activity>
 
