--- a/kalturaPlay/build.gradle
+++ b/kalturaPlay/build.gradle
@@ -22,7 +22,7 @@ android {
 dependencies {
     compile project(':playerSDK')
     compile 'com.android.support:mediarouter-v7:23.1.1'
-    compile 'com.google.android.gms:play-services:8.3.0'
+//    compile 'com.google.android.gms:play-services:8.3.0'
     compile 'com.android.support:appcompat-v7:23.1.1'
 //    compile 'com.google.android.gms:play-services-ads:8.3.0'
 //    compile 'com.google.android.gms:play-services-identity:8.3.0'
