--- a/.travis.yml
+++ b/.travis.yml
@@ -16,20 +16,22 @@ script:
 after_success:
 - ls -lh kalturaPlay/build/outputs/apk
 deploy:
-  provider: releases
-  draft: true
-  skip_cleanup: true
-  file:
-    - kalturaPlay/build/outputs/apk/kalturaPlay-debug.apk
-    - kalturaPlay/build/outputs/apk/kalturaPlay-release-unsigned.apk
-    - castCompanionLibraryandroid/build/outputs/aar/castCompanionLibraryandroid-release.aar
-    - exoPlayerLib/build/outputs/aar/exoPlayerLib-release.aar
-    - googlemediaframework/build/outputs/aar/googlemediaframework-release.aar
-    - playerSDK/build/outputs/aar/playerSDK-release.aar
-  on:
-    tags: true
-  api-key:
-    secure: "TklD17qRdJATf4gBnRwmxA7/FNBS37BY69hGgFrI8wSNRpoL/QeD3pLDvAiwZaWwZtTdTvb8GKGI9KCFKwR8DqoqxMqpyazPlgqd76INQ9jhVuY8kIwn+kDJQBhT4wmYOqKcuzICG5RJF76fJc7FE/KKVvKkgyG8jRL+Vh826do="
+  - provider: releases
+    draft: true
+    skip_cleanup: true
+    file:
+      - kalturaPlay/build/outputs/apk/kalturaPlay-debug.apk
+      - kalturaPlay/build/outputs/apk/kalturaPlay-release-unsigned.apk
+      - castCompanionLibraryandroid/build/outputs/aar/castCompanionLibraryandroid-release.aar
+      - exoPlayerLib/build/outputs/aar/exoPlayerLib-release.aar
+      - googlemediaframework/build/outputs/aar/googlemediaframework-release.aar
+      - playerSDK/build/outputs/aar/playerSDK-release.aar
+    on:
+      tags: true
+    api-key:
+      secure: "TklD17qRdJATf4gBnRwmxA7/FNBS37BY69hGgFrI8wSNRpoL/QeD3pLDvAiwZaWwZtTdTvb8GKGI9KCFKwR8DqoqxMqpyazPlgqd76INQ9jhVuY8kIwn+kDJQBhT4wmYOqKcuzICG5RJF76fJc7FE/KKVvKkgyG8jRL+Vh826do="
+  - provider: script
+    script: pull-artifacts-upload.sh
 notifications:
   email:
     recipients:
