Travis: don't publish aar files.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,12 +23,9 @@ deploy:
   file:
     - kalturaPlay/build/outputs/apk/kalturaPlay-debug.apk
     - kalturaPlay/build/outputs/apk/kalturaPlay-release-unsigned.apk
-    - googlemediaframework/build/outputs/aar/googlemediaframework-release.aar
-    - playerSDK/build/outputs/aar/playerSDK-release.aar
   on:
     tags: true
-  api-key:
-    secure: "TklD17qRdJATf4gBnRwmxA7/FNBS37BY69hGgFrI8wSNRpoL/QeD3pLDvAiwZaWwZtTdTvb8GKGI9KCFKwR8DqoqxMqpyazPlgqd76INQ9jhVuY8kIwn+kDJQBhT4wmYOqKcuzICG5RJF76fJc7FE/KKVvKkgyG8jRL+Vh826do="
+  api-key: $GH_TOKEN
 notifications:
   email:
     recipients:
