--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
 - ./gradlew assembleDebug
 - ./gradlew assembleRelease
 after_success:
-- ls -lh kalturaPlay/build/outputs/apk
+- ls -lh kalturaPlay/build/outputs/apk testapp/build/outputs/apk
 - ./pull-artifacts-upload.sh
 deploy:
   provider: releases
