--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':googlemediaframework'
+include ':googlemediaframework', ':playerscollection'
 include ':playerSDK'
 include ':kalturaPlay'
 include ':testapp'
