--- a/testapp/src/main/AndroidManifest.xml
+++ b/testapp/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     android:versionCode="1"
     android:versionName="1.4" >
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="19" />
@@ -20,6 +21,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:theme="@style/Theme.AppCompat"
         >
         <activity android:name=".MainActivity">
             <intent-filter>
