--- a/testapp/build.gradle
+++ b/testapp/build.gradle
@@ -21,5 +21,5 @@ android {
 
 dependencies {
     compile project(':playerSDK')
-    compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
 }
