--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,11 @@ android:
   - extra-android-m2repository
   - extra-google-m2repository
 script:
-- ./gradlew assembleDebug --stacktrace
-- ./gradlew assembleRelease
+- ./gradlew :kalturaPlay:assembleDebug
+- ./gradlew :kalturaPlay:assembleRelease
+- ./gradlew :testapp:assembleDebug || true
 after_success:
-- ls -lh kalturaPlay/build/outputs/apk testapp/build/outputs/apk
+- ls -lh kalturaPlay/build/outputs/apk
 - ./pull-artifacts-upload.sh
 deploy:
   provider: releases
