Removed nativeControls and move it to KalturaDemos

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':googlemediaframework', ':playersCollection', ':nativeControlls'
+include ':googlemediaframework', ':playersCollection'
 include ':playerSDK'
 include ':kalturaPlay'
 include ':testapp'
