Minor config changes.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,16 @@ sudo: false
 language: android
 android:
   components:
-  - platform-tools
   - tools
+  - platform-tools
   - build-tools-23.0.2
   - android-23
-  - android-22
   - extra-android-m2repository
   - extra-google-m2repository
 script:
 - ./gradlew :kalturaPlay:assembleDebug
 - ./gradlew :kalturaPlay:assembleRelease
-- ./gradlew :testapp:assembleDebug || true
+- ./gradlew :testapp:assembleDebug
 after_success:
 - ls -lh kalturaPlay/build/outputs/apk
 - ./pull-artifacts-upload.sh
