--- a/playerSDK/build.gradle
+++ b/playerSDK/build.gradle
@@ -1,4 +1,7 @@
+
 apply plugin: 'com.android.library'
+
+apply from: "../version.gradle"
 
 android {
     compileSdkVersion 23
@@ -7,7 +10,6 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 23
-        versionName "2.4.0.rc1"
     }
 
     buildTypes {
