--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ cache:
     - $HOME/.gradle/wrapper/
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+before_script:
+  - ./travis-verify-version-tag.sh
 script:
 - ./gradlew :kalturaPlay:assembleRelease
 - ./gradlew :testapp:assembleRelease
