--- a/kalturaPlay/build.gradle
+++ b/kalturaPlay/build.gradle
@@ -1,17 +1,19 @@
 apply plugin: 'com.android.application'
 
-apply from: "../version.gradle"
+apply from: "../kalturaCommon.gradle"
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion kaltura.compileSdkVersion
+    buildToolsVersion kaltura.buildToolsVersion
 
     defaultConfig {
         applicationId "com.kaltura.kalturaplayertoolkit"
-        minSdkVersion 16
-        targetSdkVersion 23
+        minSdkVersion kaltura.minSdkVersion
+        targetSdkVersion kaltura.targetSdkVersion
+        versionName kaltura.version
         versionCode 6
     }
+    
     buildTypes {
         release {
             minifyEnabled false
