--- a/testapp/build.gradle
+++ b/testapp/build.gradle
@@ -1,16 +1,19 @@
 apply plugin: 'com.android.application'
 
+apply from: "../kalturaCommon.gradle"
+
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion kaltura.compileSdkVersion
+    buildToolsVersion kaltura.buildToolsVersion
 
     defaultConfig {
         applicationId "com.kaltura.testapp"
         minSdkVersion 21
-        targetSdkVersion 23
+        targetSdkVersion kaltura.targetSdkVersion
+        versionName kaltura.version
         versionCode 1
-        versionName "1.0"
     }
+
     buildTypes {
         release {
             minifyEnabled false
