move KaturaDemos  app to BasicPlayDemo

--- a/KalturaDemos/settings.gradle
+++ b/KalturaDemos/settings.gradle
@@ -1,4 +1,4 @@
-include ':app'
+include ':BasicPlayDemo'
 
 include ':googlemediaframework'
 project(':googlemediaframework').projectDir=new File('../googlemediaframework')
