--- a/KalturaDemos/BasicPlayDemo/build.gradle
+++ b/KalturaDemos/BasicPlayDemo/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "kaltura.com.kalturademos"
+        applicationId "com.kaltura.basicplaydemo"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
