--- a/KalturaDemos/settings.gradle
+++ b/KalturaDemos/settings.gradle
@@ -1,5 +1,6 @@
 include ':BasicPlayerDemo'
 include ':MultiPlayerDemo'
+include ':ChangeMediaDemo'
 include ':googlemediaframework'
 project(':googlemediaframework').projectDir=new File('../googlemediaframework')
 
