--- a/KalturaDemos/BasicPlayerTest/build.gradle
+++ b/KalturaDemos/BasicPlayerTest/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.kaltura.basicplayerdemo"
+        applicationId "com.kaltura.basicplayertest"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
