LocalAssetsDemo: demo for testing offline features of the SDK.

--- a/KalturaDemos/settings.gradle
+++ b/KalturaDemos/settings.gradle
@@ -2,6 +2,8 @@ include ':BasicPlayerDemo'
 include ':BasicPlayerTest'
 include ':MultiPlayerDemo'
 include ':ChangeMediaDemo'
+include ':LocalAssetsDemo'
+
 include ':googlemediaframework'
 project(':googlemediaframework').projectDir=new File('../googlemediaframework')
 
