Move player-idk-demos KalturaDemos   app to KalturaDemo and PlayerFragmentDemo

--- a/KalturaDemos/settings.gradle
+++ b/KalturaDemos/settings.gradle
@@ -3,6 +3,7 @@ include ':BasicPlayerTest'
 include ':MultiPlayerDemo'
 include ':ChangeMediaDemo'
 include ':LocalAssetsDemo'
+include ':PlayerFragmentDemo'
 
 include ':googlemediaframework'
 project(':googlemediaframework').projectDir=new File('../googlemediaframework')
