--- a/KalturaDemos/settings.gradle
+++ b/KalturaDemos/settings.gradle
@@ -1,4 +1,5 @@
 include ':BasicPlayerDemo'
+include ':BasicOTTPlayerDemo'
 include ':BasicPlayerTest'
 include ':MultiPlayerDemo'
 include ':ChangeMediaDemo'
