--- a/KalturaDemos/BasicOTTPlayerDemo/build.gradle
+++ b/KalturaDemos/BasicOTTPlayerDemo/build.gradle
@@ -4,8 +4,6 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
-    useLibrary  'org.apache.http.legacy'
-
     defaultConfig {
         applicationId "com.kaltura.basicplayerdemo"
         minSdkVersion 16
@@ -25,5 +23,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile project(':playerSDK')
 }
