--- a/KalturaDemos/LocalAssetsDemo/src/main/AndroidManifest.xml
+++ b/KalturaDemos/LocalAssetsDemo/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest package="com.kaltura.localassetsdemo"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
