Upgrade to Android's gradle plugin 2.1.0.

--- a/testapp/build.gradle
+++ b/testapp/build.gradle
@@ -4,7 +4,7 @@ apply from: "../kalturaCommon.gradle"
 
 android {
     compileSdkVersion kaltura.compileSdkVersion
-    buildToolsVersion kaltura.buildToolsVersion
+    buildToolsVersion '23.0.3'
 
     defaultConfig {
         applicationId "com.kaltura.testapp"
