--- a/kalturaPlay/build.gradle
+++ b/kalturaPlay/build.gradle
@@ -4,7 +4,7 @@ apply from: "../kalturaCommon.gradle"
 
 android {
     compileSdkVersion kaltura.compileSdkVersion
-    buildToolsVersion kaltura.buildToolsVersion
+    buildToolsVersion '23.0.3'
 
     defaultConfig {
         applicationId "com.kaltura.kalturaplayertoolkit"
@@ -25,6 +25,6 @@ android {
 
 dependencies {
     compile project(':playerSDK')
-    compile 'com.android.support:mediarouter-v7:23.1.1'
-    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:mediarouter-v7:23.4.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
 }
