--- a/playerSDK/build.gradle
+++ b/playerSDK/build.gradle
@@ -4,7 +4,7 @@ apply from: "../kalturaCommon.gradle"
 
 android {
     compileSdkVersion kaltura.compileSdkVersion
-    buildToolsVersion kaltura.buildToolsVersion
+    buildToolsVersion '23.0.3'
 
     defaultConfig {
         minSdkVersion kaltura.minSdkVersion
@@ -23,7 +23,7 @@ android {
 dependencies {
     compile project(':googlemediaframework')
     compile 'com.google.android.gms:play-services-cast:8.4.0'
-    compile 'com.android.support:mediarouter-v7:23.1.1'
-    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:mediarouter-v7:23.4.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
     compile fileTree(dir: 'libs', include: ['ima-sdk-*.jar'])
 }
