--- a/KalturaDemos/BasicPlayerDemo/src/main/AndroidManifest.xml
+++ b/KalturaDemos/BasicPlayerDemo/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
         <activity android:name=".MainActivity"
                   android:configChanges="orientation|screenSize|keyboardHidden">
             <intent-filter>
