Added demo for inline player

--- a/KalturaDemos/settings.gradle
+++ b/KalturaDemos/settings.gradle
@@ -1,4 +1,4 @@
-include ':BasicPlayerDemo'
+include ':BasicPlayerDemo', ':inlineplayerdemo'
 include ':BasicPlayerTest'
 include ':MultiPlayerDemo'
 include ':ChangeMediaDemo'
@@ -6,8 +6,8 @@ include ':LocalAssetsDemo'
 include ':PlayerFragmentDemo'
 
 include ':googlemediaframework'
-project(':googlemediaframework').projectDir=new File('../googlemediaframework')
+project(':googlemediaframework').projectDir = new File('../googlemediaframework')
 
 include ':playerSDK'
-project(':playerSDK').projectDir=new File('../playerSDK')
+project(':playerSDK').projectDir = new File('../playerSDK')
 
