--- a/KalturaDemos/inlineplayerdemo/build.gradle
+++ b/KalturaDemos/inlineplayerdemo/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "kaltura.inlineplayerdemo"
+        applicationId "com.kaltura.inlineplayerdemo"
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
