--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 sudo: false
 language: android
+jdk:
+  - oraclejdk8
 android:
   components:
   - tools
   - platform-tools
-  - build-tools-23.0.2
-  - build-tools-23.0.3
-  - android-23
+  - build-tools-24.0.0
+  - android-24
   - extra-android-m2repository
   - extra-google-m2repository
 env:
