--- a/KalturaDemos/LocalAssetsDemo/src/main/AndroidManifest.xml
+++ b/KalturaDemos/LocalAssetsDemo/src/main/AndroidManifest.xml
@@ -2,9 +2,10 @@
 <manifest package="com.kaltura.localassetsdemo"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/play_icon2"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
