--- a/playerSDK/build.gradle
+++ b/playerSDK/build.gradle
@@ -17,11 +17,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+
+    packagingOptions {
+        exclude 'jsr305_annotations/Jsr305_annotations.gwt.xml'
+    }
 }
 
 dependencies {
     compile project(':googlemediaframework')
-    compile 'com.google.android.gms:play-services-cast:8.4.0'
+    compile 'com.google.android.gms:play-services-cast:9.2.1'
     compile 'com.android.support:mediarouter-v7:24.0.0'
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile fileTree(dir: 'libs', include: ['ima-sdk-*.jar'])
