Fix Ad countdown is not working after going to bg or pressing learn more start using:    compile 'com.google.ads.interactivemedia.v3:interactivemedia:3.3.2' and not jar

--- a/KalturaDemos/CCPlayerDemo/build.gradle
+++ b/KalturaDemos/CCPlayerDemo/build.gradle
@@ -18,6 +18,11 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
+    packagingOptions {
+        exclude 'jsr305_annotations/Jsr305_annotations.gwt.xml'
+    }
+
 }
 
 dependencies {
