--- a/KalturaDemos/AdPlayerDemo/build.gradle
+++ b/KalturaDemos/AdPlayerDemo/build.gradle
@@ -18,6 +18,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'jsr305_annotations/Jsr305_annotations.gwt.xml'
+    }
 }
 
 dependencies {
