--- a/playerSDK/build.gradle
+++ b/playerSDK/build.gradle
@@ -25,7 +25,9 @@ android {
 
 dependencies {
     compile project(':googlemediaframework')
-    compile 'com.google.android.gms:play-services-cast:9.2.1'
+    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile 'com.google.android.gms:play-services-cast-framework:9.4.0'
+    compile 'com.googlecode.android-query:android-query:0.25.9'
     compile 'com.android.support:mediarouter-v7:24.0.0'
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.google.ads.interactivemedia.v3:interactivemedia:3.3.2'
