--- a/.travis.yml
+++ b/.travis.yml
@@ -44,5 +44,6 @@ notifications:
       - oren.melamed@kaltura.com
       - gilad.nadav@kaltura.com
       - g.kozlov@synergetica.co
+      - anton.afanasiev@kaltura.com
     on_success: change
     on_failure: always
