--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ android:
   components:
   - tools
   - platform-tools
+  - build-tools-24.0.2
   - build-tools-24.0.0
   - android-24
   - extra-android-m2repository
