--- a/playerSDK/build.gradle
+++ b/playerSDK/build.gradle
@@ -25,8 +25,8 @@ android {
 
 dependencies {
     compile project(':googlemediaframework')
-    compile 'com.google.android.gms:play-services-cast:9.2.1'
-    compile 'com.android.support:mediarouter-v7:24.0.0'
-    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile 'com.google.android.gms:play-services-cast:8.3.0'
+    compile 'com.android.support:appcompat-v7:22.2.+'
+    compile 'com.android.support:mediarouter-v7:22.2.+'
     compile 'com.google.ads.interactivemedia.v3:interactivemedia:3.3.2'
 }
