--- a/KalturaDemos/DTGPlayerDemo/src/main/AndroidManifest.xml
+++ b/KalturaDemos/DTGPlayerDemo/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <application
         android:fullBackupContent="false"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/play_icon2"
         android:label="@string/app_name"
         android:supportsRtl="false"
         android:theme="@style/AppTheme">
