--- a/kalturaCommon.gradle
+++ b/kalturaCommon.gradle
@@ -1,7 +1,7 @@
 
 // Common values for Kaltura Player SDK
 def buildConfig = [
-        version: '2.6.6',
+        version: 'dev',
         
         compileSdkVersion: 24,
         buildToolsVersion: '24.0.0',
