--- a/playerSDK/build.gradle
+++ b/playerSDK/build.gradle
@@ -4,7 +4,7 @@ apply from: "../kalturaCommon.gradle"
 
 android {
     compileSdkVersion kaltura.compileSdkVersion
-    buildToolsVersion '24.0.0'
+    buildToolsVersion '24.0.3'
 
     defaultConfig {
         minSdkVersion kaltura.minSdkVersion
@@ -25,8 +25,11 @@ android {
 
 dependencies {
     compile project(':googlemediaframework')
-    compile 'com.google.android.gms:play-services-cast:8.3.0'
-    compile 'com.android.support:appcompat-v7:22.2.+'
-    compile 'com.android.support:mediarouter-v7:22.2.+'
-    compile 'com.google.ads.interactivemedia.v3:interactivemedia:3.3.2'
+
+    final PLAY_SERVICES_VERSION = '9.6.1'
+    final SUPPORT_LIBRARY_VERSION = '24.2.1'
+    compile "com.google.android.gms:play-services-cast:$PLAY_SERVICES_VERSION"
+    compile "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
+    compile "com.android.support:mediarouter-v7:$SUPPORT_LIBRARY_VERSION"
+    compile 'com.google.ads.interactivemedia.v3:interactivemedia:3.4.0'
 }
